--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,9 @@ classifiers =
 
 [options]
 python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
-setup_requires = setuptools-scm
+setup_requires =
+    setuptools-scm[toml] >= 3.4.1
+    setuptools >= 42
 install_requires =
     zipp>=0.5
     pathlib2; python_version < '3'
