--- a/tox.ini
+++ b/tox.ini
@@ -4,9 +4,11 @@ minversion = 3.2
 # https://github.com/jaraco/skeleton/issues/6
 tox_pip_extensions_ext_venv_update = true
 toxworkdir={env:TOX_WORK_DIR:.tox}
+requires = tox-pip-version
 
 
 [testenv]
+pip_version = pip
 deps =
 commands =
 	pytest {posargs}
